添加导出字段控制
