# swagger/swagger.json
@@ -515,6 +515,13 @@
                 ]
             }
         },
+      "/manager/dataExcel": {
+        "post": {
+          "tags": [
+            "manager"
+          ]
+        }
+      },
         "/manager/dataList": {
             "get": {
                 "tags": [
@@ -737,6 +744,10 @@
                 "Id": {
                     "description": "主键",
                     "type": "string"
+                },
+              "IsExport": {
+                "description": "是否导出",
+                "type": "string"
                 },
                 "IsPrimary": {
                     "description": "是否主键",
